--- a/style.css
+++ b/style.css
@@ -7,10 +7,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100vh;
     margin: 0; 
     padding: 0;
+}
+
+main {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
@@ -66,17 +73,47 @@ section button:hover {
     box-shadow: 0 4px 8px rgba(79, 74, 74, 0.2);
 }
 
-/*result*/
+.resultados-pesquisa {
+    width: 60rem;
+    height: 46vh;
+    overflow-y: auto;
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 0.6rem;
+}
+
+.item-resultado {
+    background: #FFFFFF;
+    border-radius: 0.6rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.item-resultado h2 {
+    font-size: 1.5rem;
+    color: #222831;
+}
+
+.item-resultado a {
+    text-decoration: none;
+    color: #30475E;
+}
+
+.item-resultado a:hover {
+    text-decoration: underline;
+}
+
+.descricao-meta {
+    color: #45474B;
+    margin: 0.5rem 0;
+}
 
 footer {
     background-color: rgb(35, 67, 99);
     color: #dbdde1;
     text-align: center;
-    padding: 0;
+    padding: 1rem 0;
     width: 100%;
-    position: absolute;
-    bottom: 0;
     font-size: 1rem;
 }
-
-/*media */
