--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ section button:hover {
     padding: 1rem;
     margin-bottom: 1rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 90%;
 }
 
 .item-resultado h2 {
