--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ section input {
     padding: 1rem;
     border-radius: 1rem;
     margin-bottom: 1rem;
-    color: #dbdde1;
+    color: #3d4147;
     font-size: 1rem;
     box-sizing: border-box;
 }
